--- a/careers.html
+++ b/careers.html
@@ -158,7 +158,7 @@
                                 <div class="label"><span>Share</span> <img src="assets/icons/Header/Share-Icon.svg"
                                         alt="Share"></div>
                                 <div class="share-icons">
-                                    <a href="https://www.facebook.com/sharer/sharer.php?u=#link" target="_blank">
+                                    <a class="facebook-share" href="https://www.facebook.com/sharer/sharer.php?u=" target="_blank">
                                         <img src="assets/icons/Header/Facebook.svg" alt="FB">
                                     </a>
                                     <a href="#" target="_blank">
@@ -167,10 +167,10 @@
                                     <a href="https://www.example.com/" target="_blank">
                                         <img src="assets/icons/Header/Link.svg" alt="URL">
                                     </a>
-                                    <a href="https://www.linkedin.com/sharing/share-offsite/?url=#link" target="_blank">
+                                    <a class="linkedin-share" href="https://www.linkedin.com/sharing/share-offsite/?url=" target="_blank">
                                         <img src="assets/icons/Header/Linkedin.svg" alt="Li">
                                     </a>
-                                    <a href="https://twitter.com/intent/tweet?text=#content" target="_blank">
+                                    <a class="twitter-share" href="https://twitter.com/intent/tweet?url=" target="_blank">
                                         <img src="assets/icons/Header/Twitter.svg" alt="Tw">
                                     </a>
                                     <i class="close-pop">&times;</i>
