--- a/about.html
+++ b/about.html
@@ -108,11 +108,11 @@
                 <div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="about.html#our-strategy">Our Strategy</a></li>
-                            <li><a href="about.html#director-general-message">Director General's Message</a></li>
-                            <li><a href="about.html#our-partners">Our Partners</a></li>
-                            <li><a href="about.html#our-certifications">Our Certifications</a></li>
+                            <li><a href="about.html?tab=about-us">About</a></li>
+                            <li><a href="about.html?tab=our-strategy">Our Strategy</a></li>
+                            <li><a href="about.html?tab=director-general-message">Director General's Message</a></li>
+                            <li><a href="about.html?tab=our-partners">Our Partners</a></li>
+                            <li><a href="about.html?tab=our-certifications">Our Certifications</a></li>
                             <li><a href="careers.html">Careers</a></li>
                         </ul>
                     </div>
@@ -131,7 +131,7 @@
                     <div class="container">
                         <ul class="sub-items">
                             <li><a href="open-data.html">Open Data </a></li>
-                            <li><a href="open-data.html#policy">Open Data Policy</a></li>
+                            <li><a href="open-data.html?tab=policy">Open Data Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -459,7 +459,7 @@
     <div class="information">
         <div class="container">
             <div class="accordion" id="aboutTabs">
-                <div class="card">
+                <div class="card about-us">
                     <div class="card-header" id="headingOne">
                         <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
@@ -502,7 +502,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card our-strategy">
                     <div class="card-header" id="headingTwo">
                         <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
@@ -528,7 +528,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card director-general-message">
                     <div class="card-header" id="headingThree">
                         <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
