--- a/events.html
+++ b/events.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="assets/img/Header/favicon.png" type="image/png">
 </head>
 
-<body class="events-page">
+<body class="all-events-page">
 
     <!-- 
 		+----------------------------
@@ -106,16 +106,16 @@
                 <div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="about.html#our-strategy">Our Strategy</a></li>
-                            <li><a href="about.html#director-general-message">Director General's Message</a></li>
-                            <li><a href="about.html#our-partners">Our Partners</a></li>
-                            <li><a href="about.html#our-certifications">Our Certifications</a></li>
+                            <li><a href="about.html?tab=about-us">About</a></li>
+                            <li><a href="about.html?tab=our-strategy">Our Strategy</a></li>
+                            <li><a href="about.html?tab=director-general-message">Director General's Message</a></li>
+                            <li><a href="about.html?tab=our-partners">Our Partners</a></li>
+                            <li><a href="about.html?tab=our-certifications">Our Certifications</a></li>
                             <li><a href="careers.html">Careers</a></li>
                         </ul>
                     </div>
                 </div>
-    
+
                 <div class="sub-menu services">
                     <div class="container">
                         <ul class="sub-items">
@@ -124,12 +124,12 @@
                         </ul>
                     </div>
                 </div>
-    
+
                 <div class="sub-menu open-data">
                     <div class="container">
                         <ul class="sub-items">
                             <li><a href="open-data.html">Open Data </a></li>
-                            <li><a href="open-data.html#policy">Open Data Policy</a></li>
+                            <li><a href="open-data.html?tab=policy">Open Data Policy</a></li>
                         </ul>
                     </div>
                 </div>
@@ -461,7 +461,7 @@
     <div class="events events-page" data-items-per-page="3" data-shown-items="3">
         <div class="container">
             <section>
-                <div class="row">
+                <div class="row mx-0">
                     <div class="col-lg-4">
                         <div class="block">
                             <div class="event">
