--- a/open-data.html
+++ b/open-data.html
@@ -104,35 +104,35 @@
 	
 				<!-- Sub Menus -->
 				<div class="sub-menu about">
-					<div class="container">
-						<ul class="sub-items">
-							<li><a href="about.html">About</a></li>
-							<li><a href="about.html#our-strategy">Our Strategy</a></li>
-							<li><a href="about.html#director-general-message">Director General's Message</a></li>
-							<li><a href="about.html#our-partners">Our Partners</a></li>
-							<li><a href="about.html#our-certifications">Our Certifications</a></li>
-							<li><a href="careers.html">Careers</a></li>
-						</ul>
-					</div>
-				</div>
-	
-				<div class="sub-menu services">
-					<div class="container">
-						<ul class="sub-items">
-							<li><a href="services.html">All Services</a></li>
-							<li><a href="new-service.html">New Service Application</a></li>
-						</ul>
-					</div>
-				</div>
-	
-				<div class="sub-menu open-data">
-					<div class="container">
-						<ul class="sub-items">
-							<li><a href="open-data.html">Open Data </a></li>
-							<li><a href="open-data.html#policy">Open Data Policy</a></li>
-						</ul>
-					</div>
-				</div>
+                    <div class="container">
+                        <ul class="sub-items">
+                            <li><a href="about.html?tab=about-us">About</a></li>
+                            <li><a href="about.html?tab=our-strategy">Our Strategy</a></li>
+                            <li><a href="about.html?tab=director-general-message">Director General's Message</a></li>
+                            <li><a href="about.html?tab=our-partners">Our Partners</a></li>
+                            <li><a href="about.html?tab=our-certifications">Our Certifications</a></li>
+                            <li><a href="careers.html">Careers</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="sub-menu services">
+                    <div class="container">
+                        <ul class="sub-items">
+                            <li><a href="services.html">All Services</a></li>
+                            <li><a href="new-service.html">New Service Application</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="sub-menu open-data">
+                    <div class="container">
+                        <ul class="sub-items">
+                            <li><a href="open-data.html">Open Data </a></li>
+                            <li><a href="open-data.html?tab=policy">Open Data Policy</a></li>
+                        </ul>
+                    </div>
+                </div>
 	
 				<div class="sub-menu media-centre">
 					<div class="container">
@@ -456,7 +456,7 @@
     <div class="open-data data-tabs">
         <div class="container">
             <div class="accordion" id="servicesTabs">
-                <div class="card">
+                <div class="card policy">
                     <div class="card-header" id="heading-1">
                         <h2 class="mb-0">
                             <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
