--- a/job-application.html
+++ b/job-application.html
@@ -106,16 +106,16 @@
                 <div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html">About</a></li>
-                            <li><a href="about.html#our-strategy">Our Strategy</a></li>
-                            <li><a href="about.html#director-general-message">Director General's Message</a></li>
-                            <li><a href="about.html#our-partners">Our Partners</a></li>
-                            <li><a href="about.html#our-certifications">Our Certifications</a></li>
+                            <li><a href="about.html?tab=about-us">About</a></li>
+                            <li><a href="about.html?tab=our-strategy">Our Strategy</a></li>
+                            <li><a href="about.html?tab=director-general-message">Director General's Message</a></li>
+                            <li><a href="about.html?tab=our-partners">Our Partners</a></li>
+                            <li><a href="about.html?tab=our-certifications">Our Certifications</a></li>
                             <li><a href="careers.html">Careers</a></li>
                         </ul>
                     </div>
                 </div>
-    
+
                 <div class="sub-menu services">
                     <div class="container">
                         <ul class="sub-items">
@@ -124,12 +124,12 @@
                         </ul>
                     </div>
                 </div>
-    
+
                 <div class="sub-menu open-data">
                     <div class="container">
                         <ul class="sub-items">
                             <li><a href="open-data.html">Open Data </a></li>
-                            <li><a href="open-data.html#policy">Open Data Policy</a></li>
+                            <li><a href="open-data.html?tab=policy">Open Data Policy</a></li>
                         </ul>
                     </div>
                 </div>
