Fixing Some Arabic Translation Issues

--- a/AR/contact.html
+++ b/AR/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>إتصل | حكومة الشارقة | الإدارة العامة للدفاع المدني</title>
+    <title>إتصل بنا | حكومة الشارقة | الإدارة العامة للدفاع المدني</title>
 
     <!-- Include Main Files -->
     <link href="assets/css/scd-main.css" type="text/css" rel="stylesheet">
@@ -89,15 +89,15 @@
 
                 <!-- Main Menu Items -->
                 <div class="main-links">
-                    <a href="index.html" class="nav-item">الأساسية</a>
-                    <a href="#" class="nav-item has-sub" data-sub="about">حول <i class="fas fa-caret-down"></i></a>
+                    <a href="index.html" class="nav-item">الرئيسية</a>
+                    <a href="#" class="nav-item has-sub" data-sub="about">عن الإدارة <i class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="services">الخدمات <i
                             class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="media-centre">المركز الإعلامي <i
                             class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="open-data">البيانات المفتوحة <i
                             class="fas fa-caret-down"></i></a>
-                    <a href="#" class="nav-item has-sub" data-sub="contact">إتصل <i class="fas fa-caret-down"></i></a>
+                    <a href="#" class="nav-item has-sub" data-sub="contact">إتصل بنا <i class="fas fa-caret-down"></i></a>
                 </div>
 
                 <!-- Login Button -->
@@ -107,7 +107,7 @@
                 <div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html?tab=about-us">حول</a></li>
+                            <li><a href="about.html?tab=about-us">عن الإدارة</a></li>
                             <li><a href="about.html?tab=our-strategy">استراتيجيتنا</a></li>
                             <li><a href="about.html?tab=director-general-message">كلمة المدير العام</a></li>
                             <li><a href="about.html?tab=our-partners">شركائنا</a></li>
@@ -147,7 +147,7 @@
                 <div class="sub-menu contact">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="contact.html">إتصل</a></li>
+                            <li><a href="contact.html">إتصل بنا</a></li>
                             <li><a href="feedback.html">الملاحظات والشكاوى</a></li>
                         </ul>
                     </div>
@@ -242,7 +242,7 @@
                             <menu>
                                 <h3>روابط سريعة</h3>
                                 <ul>
-                                    <li><a href="#">إتصل</a></li>
+                                    <li><a href="#">إتصل بنا</a></li>
                                     <li><a href="#">محطات الإطفاء</a></li>
                                     <li><a href="#">الدعم</a></li>
                                 </ul>
@@ -440,11 +440,11 @@
     <div class="page-header">
         <div class="container">
             <div class="page-breadcrumb">
-                <a href="index.html">الرئيسية</a> / <span>إتصل</span>
+                <a href="index.html">الرئيسية</a> / <span>إتصل بنا</span>
             </div>
 
             <div class="page-tools">
-                <h3 class="title">إتصل</h3>
+                <h3 class="title">إتصل بنا</h3>
             </div>
         </div>
     </div>
@@ -501,7 +501,7 @@
                             <div class="menu happiness-centres">
                                 <a href="#" class="location active"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3605.1427483853745!2d55.39907251501282!3d25.3665318838177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5a27bce9139f%3A0x455b50b33b7b1913!2sSharjah%20Fire%20Station%20Headquarters!5e0!3m2!1sen!2seg!4v1611161264178!5m2!1sen!2seg">
-                                    مقر مطافئ الشارقة</a>
+                                    محطة الإطفاء بالشارقة - المركز الرئيسي</a> 
                                 <a href="#" class="location"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
                                     الدفاع المدني الشارقة - خورفكان</a>
@@ -510,13 +510,13 @@
                             <div class="menu fire-stations">
                                 <a href="#" class="location"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.3775329763357!2d55.61633951531377!3d25.29151683407327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef5f32c73d06b15%3A0x68295622c91baae4!2sSajaa%20Fire%20Station!5e0!3m2!1sen!2seg!4v1611164335856!5m2!1sen!2seg">
-                                    مطافى الصجعة</a>
+                                    محطة الإطفاء الصجعة</a>
                                 <a href="#" class="location"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
                                     الدفاع المدني - سمنان</a>
                                 <a href="#" class="location"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
-                                    مطافى الذيد</a>
+                                    محطة الإطفاء الذيد</a>
                                 <a href="#" class="location"
                                     data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
                                     مركز الدفاع المدني - ميناء خالد</a>
@@ -649,22 +649,22 @@
                                         <li><a href="index.html">رسالة المدير</a></li>
                                         <li><a href="services.html">ركن التميز</a></li>
                                         <li><a href="news.html">وظائف</a></li>
-                                        <li><a href="events.html">اتصل</a></li>
+                                        <li><a href="events.html">إتصل بنا</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3">
                                     <ul>
                                         <li><a href="open-data.html">البيانات المفتوحة</a></li>
                                         <li><a href="open-data.html#policy">سياسة البيانات المفتوحة</a></li>
-                                        <li><a href="about.html">حول</a></li>
+                                        <li><a href="about.html">عن الإدارة</a></li>
                                         <li><a href="about.html#our-strategy">استراتيجيتنا</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3">
                                     <ul>
                                         <li><a href="about.html#director-general-message">الصفحة الرئيسية</a></li>
-                                        <li><a href="about.html#our-certifications">خدمات</a></li>
-                                        <li><a href="careers.html">أخبار</a></li>
+                                        <li><a href="about.html#our-certifications">الخدمات</a></li>
+                                        <li><a href="careers.html">الأخبار</a></li>
                                         <li><a href="contact.html">الأحداث</a></li>
                                     </ul>
                                 </div>
@@ -683,7 +683,7 @@
                             <a href="#">تنصل</a>
                             <a href="#">خريطة الموقع</a>
                             <a href="#">الأحكام والشروط</a>
-                            <a href="#">سياسة خاصة</a>
+                            <a href="#">سياسة الخصوصية</a>
                         </menu>
                     </div>
 
