--- a/AR/index.html
+++ b/AR/index.html
@@ -89,14 +89,14 @@
 	
 				<!-- Main Menu Items -->
 				<div class="main-links">
-					<a href="index.html" class="nav-item">الأساسية</a>
-					<a href="#" class="nav-item has-sub" data-sub="about">حول <i class="fas fa-caret-down"></i></a>
+					<a href="index.html" class="nav-item">الرئيسية</a>
+					<a href="#" class="nav-item has-sub" data-sub="about">عن الإدارة <i class="fas fa-caret-down"></i></a>
 					<a href="#" class="nav-item has-sub" data-sub="services">الخدمات <i class="fas fa-caret-down"></i></a>
 					<a href="#" class="nav-item has-sub" data-sub="media-centre">المركز الإعلامي <i
 							class="fas fa-caret-down"></i></a>
 					<a href="#" class="nav-item has-sub" data-sub="open-data">البيانات المفتوحة <i
 							class="fas fa-caret-down"></i></a>
-					<a href="#" class="nav-item has-sub" data-sub="contact">إتصل <i class="fas fa-caret-down"></i></a>
+					<a href="#" class="nav-item has-sub" data-sub="contact">إتصل بنا <i class="fas fa-caret-down"></i></a>
 				</div>
 	
 				<!-- Login Button -->
@@ -106,7 +106,7 @@
 				<div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html?tab=about-us">حول</a></li>
+                            <li><a href="about.html?tab=about-us">عن الإدارة</a></li>
                             <li><a href="about.html?tab=our-strategy">استراتيجيتنا</a></li>
                             <li><a href="about.html?tab=director-general-message">كلمة المدير العام</a></li>
                             <li><a href="about.html?tab=our-partners">شركائنا</a></li>
@@ -146,7 +146,7 @@
 				<div class="sub-menu contact">
 					<div class="container">
 						<ul class="sub-items">
-							<li><a href="contact.html">إتصل</a></li>
+							<li><a href="contact.html">إتصل بنا</a></li>
 							<li><a href="feedback.html">الملاحظات والشكاوى</a></li>
 						</ul>
 					</div>
@@ -240,7 +240,7 @@
 							<menu>
 								<h3>روابط سريعة</h3>
 								<ul>
-									<li><a href="#">إتصل</a></li>
+									<li><a href="#">إتصل بنا</a></li>
 									<li><a href="#">محطات الإطفاء</a></li>
 									<li><a href="#">الدعم</a></li>
 								</ul>
@@ -466,7 +466,7 @@
 									<div class="his-title">نائب رئيس مجلس الوزراء ووزير الداخلية</div>
 								</div>
 							</div>
-							<a href="#" class="learn-more">أعرف أكثر</a>
+							<a href="#" class="learn-more">للمزيد</a>
 						</div>
 					</div>
 				</div>
@@ -485,7 +485,7 @@
 							<div class="paragraph">
 								نحن نبتكر للارتقاء ، اكتشف المزيد عما سيحدث للخمسين عامًا القادمة.
 							</div>
-							<a href="#" class="learn-more">أعرف أكثر</a>
+							<a href="#" class="learn-more">للمزيد</a>
 						</div>
 					</div>
 				</div>
@@ -518,7 +518,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Gas-Icon.svg" alt="Gas">
 						</div>
-						<h3>اعتماد اسطوانة غاز مركبات النقل</h3>
+						<h3>إعتماد مركبات نقل أسطوانات الغاز</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -526,7 +526,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Engineering-Icon.svg" alt="Engineering">
 						</div>
-						<h3>اعتماد الهندسة الخطط</h3>
+						<h3>إعتماد الخطط الهندسية</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -534,7 +534,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Edu-Icon.svg" alt="Gas">
 						</div>
-						<h3>التوعية محاضرات</h3>
+						<h3>محاضرات توعوية</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -550,7 +550,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Gas-Icon.svg" alt="Gas">
 						</div>
-						<h3>اعتماد اسطوانة غاز مركبات النقل</h3>
+						<h3>إعتماد مركبات نقل أسطوانات الغاز</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -558,7 +558,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Engineering-Icon.svg" alt="Engineering">
 						</div>
-						<h3>اعتماد الهندسة الخطط</h3>
+						<h3>إعتماد الخطط الهندسية</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -566,7 +566,7 @@
 						<div class="icon">
 							<img src="assets/icons/Home/Edu-Icon.svg" alt="Gas">
 						</div>
-						<h3>التوعية محاضرات</h3>
+						<h3>محاضرات توعوية</h3>
 					</div>
 				</div>
 				<div class="block">
@@ -608,7 +608,7 @@
 							<h3>سحاب للحلول الذكية تطور منصة رقمية ذكية للدفاع المدني الشارقة</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -620,7 +620,7 @@
 							<h3>الدفاع المدني الشارقة ينشر دراجات ذكية للطوارئ</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -632,7 +632,7 @@
 							<h3>اندلع حريق في ساحة خردة للسيارات في المنطقة الصناعية بالشارقة</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -644,7 +644,7 @@
 							<h3>سحاب للحلول الذكية تطور منصة رقمية ذكية للدفاع المدني الشارقة</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -656,7 +656,7 @@
 							<h3>الدفاع المدني الشارقة ينشر دراجات ذكية للطوارئ</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -668,7 +668,7 @@
 							<h3>اندلع حريق في ساحة خردة للسيارات في المنطقة الصناعية بالشارقة</h3>
 							<div class="meta">
 								<span class="date">31 سبتمبر 2020</span>
-								<span class="read-more">اقرأ أكثر</span>
+								<span class="read-more">للمزيد</span>
 							</div>
 						</div>
 					</a>
@@ -920,7 +920,7 @@
 
 							<div class="menu happiness-centres">
 								<a href="#" class="location active"
-									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3605.1427483853745!2d55.39907251501282!3d25.3665318838177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5a27bce9139f%3A0x455b50b33b7b1913!2sSharjah%20Fire%20Station%20Headquarters!5e0!3m2!1sen!2seg!4v1611161264178!5m2!1sen!2seg">									مقر مطافئ الشارقة</a>
+									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3605.1427483853745!2d55.39907251501282!3d25.3665318838177!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3e5f5a27bce9139f%3A0x455b50b33b7b1913!2sSharjah%20Fire%20Station%20Headquarters!5e0!3m2!1sen!2seg!4v1611161264178!5m2!1sen!2seg">									مقر محطات الإطفاء الشارقة</a>
 								<a href="#" class="location"
 									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">									الدفاع المدني الشارقة - خورفكان</a>
 							</div>
@@ -928,13 +928,13 @@
 							<div class="menu fire-stations">
 								<a href="#" class="location"
 									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3607.3775329763357!2d55.61633951531377!3d25.29151683407327!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef5f32c73d06b15%3A0x68295622c91baae4!2sSajaa%20Fire%20Station!5e0!3m2!1sen!2seg!4v1611164335856!5m2!1sen!2seg">
-									مطافى الصجعة</a>
+									محطة الإطفاء الصجعة</a>
 								<a href="#" class="location"
 									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
 									الدفاع المدني - سمنان</a>
 								<a href="#" class="location"
 									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
-								مطافى الذيد</a>
+								محطة الإطفاء الذيد</a>
 								<a href="#" class="location"
 									data-location-url="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3606.109867866842!2d56.34474471531432!3d25.334094032349157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ef44fb7bbf92159%3A0x75cbca1514bd50bf!2sSharjah%20Civil%20Defence%20-%20Khorfakkan!5e0!3m2!1sen!2seg!4v1611163782738!5m2!1sen!2seg">
 								مركز الدفاع المدني - ميناء خالد</a>
@@ -1130,22 +1130,22 @@
 										<li><a href="index.html">رسالة المدير</a></li>
 										<li><a href="services.html">ركن التميز</a></li>
 										<li><a href="news.html">وظائف</a></li>
-										<li><a href="events.html">اتصل</a></li>
+										<li><a href="events.html">إتصل بنا</a></li>
 									</ul>
 								</div>
 								<div class="col-lg-3">
 									<ul>
 										<li><a href="open-data.html">البيانات المفتوحة</a></li>
 										<li><a href="open-data.html#policy">سياسة البيانات المفتوحة</a></li>
-										<li><a href="about.html">حول</a></li>
+										<li><a href="about.html">عن الإدارة</a></li>
 										<li><a href="about.html#our-strategy">استراتيجيتنا</a></li>
 									</ul>
 								</div>
 								<div class="col-lg-3">
 									<ul>
 										<li><a href="about.html#director-general-message">الصفحة الرئيسية</a></li>
-										<li><a href="about.html#our-certifications">خدمات</a></li>
-										<li><a href="careers.html">أخبار</a></li>
+										<li><a href="about.html#our-certifications">الخدمات</a></li>
+										<li><a href="careers.html">الأخبار</a></li>
 										<li><a href="contact.html">الأحداث</a></li>
 									</ul>
 								</div>
@@ -1164,7 +1164,7 @@
 							<a href="#">تنصل</a>
 							<a href="#">خريطة الموقع</a>
 							<a href="#">الأحكام والشروط</a>
-							<a href="#">سياسة خاصة</a>
+							<a href="#">سياسة الخصوصية</a>
 						</menu>
 					</div>
 
