--- a/AR/job-application.html
+++ b/AR/job-application.html
@@ -89,15 +89,15 @@
 
                 <!-- Main Menu Items -->
                 <div class="main-links">
-                    <a href="index.html" class="nav-item">الأساسية</a>
-                    <a href="#" class="nav-item has-sub" data-sub="about">حول <i class="fas fa-caret-down"></i></a>
+                    <a href="index.html" class="nav-item">الرئيسية</a>
+                    <a href="#" class="nav-item has-sub" data-sub="about">عن الإدارة <i class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="services">الخدمات <i
                             class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="media-centre">المركز الإعلامي <i
                             class="fas fa-caret-down"></i></a>
                     <a href="#" class="nav-item has-sub" data-sub="open-data">البيانات المفتوحة <i
                             class="fas fa-caret-down"></i></a>
-                    <a href="#" class="nav-item has-sub" data-sub="contact">إتصل <i class="fas fa-caret-down"></i></a>
+                    <a href="#" class="nav-item has-sub" data-sub="contact">إتصل بنا <i class="fas fa-caret-down"></i></a>
                 </div>
 
                 <!-- Login Button -->
@@ -107,7 +107,7 @@
                 <div class="sub-menu about">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="about.html?tab=about-us">حول</a></li>
+                            <li><a href="about.html?tab=about-us">عن الإدارة</a></li>
                             <li><a href="about.html?tab=our-strategy">استراتيجيتنا</a></li>
                             <li><a href="about.html?tab=director-general-message">كلمة المدير العام</a></li>
                             <li><a href="about.html?tab=our-partners">شركائنا</a></li>
@@ -147,7 +147,7 @@
                 <div class="sub-menu contact">
                     <div class="container">
                         <ul class="sub-items">
-                            <li><a href="contact.html">إتصل</a></li>
+                            <li><a href="contact.html">إتصل بنا</a></li>
                             <li><a href="feedback.html">الملاحظات والشكاوى</a></li>
                         </ul>
                     </div>
@@ -242,7 +242,7 @@
                             <menu>
                                 <h3>روابط سريعة</h3>
                                 <ul>
-                                    <li><a href="#">إتصل</a></li>
+                                    <li><a href="#">إتصل بنا</a></li>
                                     <li><a href="#">محطات الإطفاء</a></li>
                                     <li><a href="#">الدعم</a></li>
                                 </ul>
@@ -583,22 +583,22 @@
                                         <li><a href="index.html">رسالة المدير</a></li>
                                         <li><a href="services.html">ركن التميز</a></li>
                                         <li><a href="news.html">وظائف</a></li>
-                                        <li><a href="events.html">اتصل</a></li>
+                                        <li><a href="events.html">إتصل بنا</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3">
                                     <ul>
                                         <li><a href="open-data.html">البيانات المفتوحة</a></li>
                                         <li><a href="open-data.html#policy">سياسة البيانات المفتوحة</a></li>
-                                        <li><a href="about.html">حول</a></li>
+                                        <li><a href="about.html">عن الإدارة</a></li>
                                         <li><a href="about.html#our-strategy">استراتيجيتنا</a></li>
                                     </ul>
                                 </div>
                                 <div class="col-lg-3">
                                     <ul>
                                         <li><a href="about.html#director-general-message">الصفحة الرئيسية</a></li>
-                                        <li><a href="about.html#our-certifications">خدمات</a></li>
-                                        <li><a href="careers.html">أخبار</a></li>
+                                        <li><a href="about.html#our-certifications">الخدمات</a></li>
+                                        <li><a href="careers.html">الأخبار</a></li>
                                         <li><a href="contact.html">الأحداث</a></li>
                                     </ul>
                                 </div>
@@ -617,7 +617,7 @@
                             <a href="#">تنصل</a>
                             <a href="#">خريطة الموقع</a>
                             <a href="#">الأحكام والشروط</a>
-                            <a href="#">سياسة خاصة</a>
+                            <a href="#">سياسة الخصوصية</a>
                         </menu>
                     </div>
 
