--- a/EN/feedback.html
+++ b/EN/feedback.html
@@ -447,7 +447,7 @@
                     <form action="#" method="POST">
                         <div class="group">
                             <input type="text" name="full-name" id="full-name" required>
-                            <span class="help-block">Some help goes here...</span>
+                            <!-- <span class="help-block">Some help goes here...</span> -->
                             <span class="bar"></span>
                             <label>Name</label>
                         </div>
