--- a/AR/feedback.html
+++ b/AR/feedback.html
@@ -419,7 +419,7 @@
                                         </div>
 
                                         <input type="range" name="happiness-meter" id="happiness-meter"
-                                            data-default="10" value="10" min="0" max="100">
+                                            data-default="10" value="100" min="0" max="100">
 
                                         <div class="percentage">10</div>
                                     </div>
@@ -448,7 +448,7 @@
                     <form action="#" method="POST">
                         <div class="group">
                             <input type="text" name="full-name" id="full-name" required>
-                            <span class="help-block">يتم تقديم بعض المساعدة هنا ...</span>
+                            <!-- <span class="help-block">يتم تقديم بعض المساعدة هنا ...</span> -->
                             <span class="bar"></span>
                             <label>الإسم</label>
                         </div>
